--- a/app/src/main/res/layout/content_read_article.xml
+++ b/app/src/main/res/layout/content_read_article.xml
@@ -6,7 +6,13 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.nytimessearch.activities.ReadArticleActivity"
-    tools:showIn="@layout/activity_read_article">
+    tools:showIn="@layout/activity_read_article"
+    android:fitsSystemWindows="true">
+
+    <include
+        layout="@layout/toolbar_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <WebView
         android:id="@+id/webView"
