--- a/app/src/main/res/layout/content_read_article.xml
+++ b/app/src/main/res/layout/content_read_article.xml
@@ -10,9 +10,9 @@
     android:fitsSystemWindows="true">
 
     <include
-        layout="@layout/toolbar_main"
+        android:layout="@layout/toolbar_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <WebView
         android:id="@+id/webView"
