--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -3,7 +3,7 @@
     android:minHeight="?attr/actionBarSize"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:titleTextColor="@android:color/holo_blue_dark"
+    app:titleTextColor="@android:color/white"
     android:background="?attr/colorPrimary"
     xmlns:android="http://schemas.android.com/apk/res/android">
 </android.support.v7.widget.Toolbar>
