--- a/app/src/main/res/layout/content_read_article.xml
+++ b/app/src/main/res/layout/content_read_article.xml
@@ -10,14 +10,15 @@
     android:fitsSystemWindows="true">
 
     <include
-        android:layout="@layout/toolbar_main"
+        layout="@layout/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <WebView
-        android:id="@+id/webView"
+        android:id="@+id/web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_below="@+id/toolbar"/>
 </RelativeLayout>
