--- a/app/src/main/res/layout/item_article_result.xml
+++ b/app/src/main/res/layout/item_article_result.xml
@@ -2,18 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:id="@+id/ll_grid_box"
+    android:padding="10dp">
 
     <ImageView
-        android:id="@+id/ivThumbnail"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:id="@+id/iv_thumbnail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
-        android:scaleType="center"/>
+        android:scaleType="centerInside"
+        android:layout_gravity="center"/>
 
     <TextView
-        android:id="@+id/tvHeadline"
+        android:id="@+id/tv_headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_gravity="center"/>
 </LinearLayout>
