--- a/app/src/main/res/menu/menu_read_article.xml
+++ b/app/src/main/res/menu/menu_read_article.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/menu_item_share"
         app:showAsAction="always"
-        android:icon="@android:drawable/ic_menu_share"
+        android:icon="@drawable/ic_action_share"
         android:title="Share"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
 </menu>
