--- a/app/src/main/res/layout/item_article_image.xml
+++ b/app/src/main/res/layout/item_article_image.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:layout_margin="5dp"
+    android:background="@drawable/stag_grid_background">
 
     <ImageView
         android:id="@+id/iv_thumbnail"
@@ -11,11 +13,17 @@
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
         android:scaleType="centerInside"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_margin="5dp"/>
 
     <TextView
         android:id="@+id/tv_headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:textSize="16sp"
+        android:maxLines="3"
+        android:ellipsize="end"
+        android:fontFamily="serif"/>
 </LinearLayout>
