--- a/app/src/main/res/drawable/stag_grid_background.xml
+++ b/app/src/main/res/drawable/stag_grid_background.xml
@@ -5,5 +5,5 @@
         android:radius="3dp"/>
     <stroke
         android:width="1dp"
-        android:color="#e4e4e4" />
+        android:color="@color/gridBorder" />
 </shape>
