--- a/app/src/main/res/layout/item_article_no_image.xml
+++ b/app/src/main/res/layout/item_article_no_image.xml
@@ -8,6 +8,13 @@
     android:background="@drawable/stag_grid_background">
 
     <TextView
+        android:id="@+id/tv_tag_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/tag_background"
+        android:textColor="@android:color/white"/>
+
+    <TextView
         android:id="@+id/tv_headline_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
