--- a/app/src/main/res/layout/toolbar_main.xml
+++ b/app/src/main/res/layout/toolbar_main.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:titleTextColor="@android:color/white"
-    android:background="?attr/colorPrimary"
+    android:background="?attr/colorAccent"
     android:id="@+id/toolbar">
 </android.support.v7.widget.Toolbar>
