--- a/app/src/main/res/drawable/tag_background.xml
+++ b/app/src/main/res/drawable/tag_background.xml
@@ -2,6 +2,8 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@android:color/holo_red_light"/>
+    <solid android:color="@color/redTag"/>
+
+    <corners android:radius="2dp"/>
 
     </shape>
