--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,14 @@
     android:layout_height="match_parent"
     tools:context="com.nytimessearch.activities.SearchActivity">
 
-    <include layout="@layout/content_search" />
+    <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/appBar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
+
+    <!--</android.support.design.widget.AppBarLayout>-->
+
+    <include layout="@layout/content_search" />
 
 </android.support.design.widget.CoordinatorLayout>
