--- a/app/src/main/res/layout/item_article_image.xml
+++ b/app/src/main/res/layout/item_article_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,29 +7,50 @@
     android:layout_margin="5dp"
     android:background="@drawable/stag_grid_background">
 
+
     <ImageView
         android:id="@+id/iv_thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/ic_launcher"
         android:layout_gravity="center"
-        android:layout_margin="5dp"/>
+        android:layout_margin="2dp"/>
 
     <TextView
         android:id="@+id/tv_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/tag_background"
-        android:textColor="@android:color/white"/>
-    
+        android:textColor="@android:color/white"
+        android:padding="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_alignLeft="@id/iv_thumbnail"
+        android:textAllCaps="true"
+        android:layout_below="@id/iv_thumbnail"/>
+
+    <TextView
+        android:id="@+id/tv_pub_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="serif"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        android:textAllCaps="true"
+        android:layout_marginTop="4dp"
+        android:layout_below="@id/tv_tag"
+        android:layout_alignLeft="@id/iv_thumbnail"/>
+
     <TextView
         android:id="@+id/tv_headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
         android:textSize="16sp"
         android:maxLines="3"
         android:ellipsize="end"
-        android:fontFamily="serif"/>
-</LinearLayout>
+        android:fontFamily="serif"
+        android:layout_alignLeft="@id/tv_pub_date"
+        android:layout_below="@id/tv_pub_date"
+        android:layout_marginTop="4dp"
+        android:textStyle="bold"/>
+</RelativeLayout>
