--- a/app/src/main/res/layout/item_article_no_image.xml
+++ b/app/src/main/res/layout/item_article_no_image.xml
@@ -24,9 +24,9 @@
         android:layout_height="wrap_content"
         android:background="@drawable/tag_background"
         android:textColor="@android:color/white"
-        android:padding="3dp"
         android:textAllCaps="true"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="3dp"/>
 
     <TextView
         android:id="@+id/tv_pub_date_main"
@@ -45,7 +45,7 @@
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
         android:textSize="16sp"
-        android:maxLines="3"
+        android:maxLines="2"
         android:ellipsize="end"
         android:fontFamily="serif"/>
 
